# tic-tac-toe

./: .gitignore  CMakeLists.txt  Makefile  Makefile_old  README.md
.github/workflows/: build.yml  build_game.yml  cmake.yml  makefile.yml  tests.yml
libs/libAI/: AI.cpp  AI.hpp  CMakeLists.txt  Makefile  NeuralNetwork.cpp  NeuralNetwork.hpp  Neuron.cpp  Neuron.hpp
libs/libError/: CMakeLists.txt  Error.cpp  Error.hpp  Makefile
libs/libGame/: CMakeLists.txt  Game.cpp  Game.hpp  Makefile
libs/libPlayer/: CMakeLists.txt  Player.cpp  Player.hpp
libs/libUI/: CMakeLists.txt  Makefile  UI.cpp  UI.hpp
src/: main.cpp
tests/: CMakeLists.txt  Makefile  main.cpp  rd_step_correct.txt  rd_step_incorrect.txt  read_step_assets.txt  sel_mode_incorrect.txt  select_mode_assets.txt  test_exception.hpp  tests.cpp  tests.hpp
tests/src/: main.cpp
tests/testlibs/libtestAI/: AI_test.cpp  AI_test.hpp  CMakeLists.txt  Makefile
tests/testlibs/libtestError/: CMakeLists.txt  Makefile  error_test.cpp  error_test.hpp
tests/testlibs/libtestGame/: CMakeLists.txt  Makefile  game_test.cpp  game_test.hpp
tests/testlibs/libtestUI/: CMakeLists.txt  Makefile  UI_test.cpp  UI_test.hpp
